clusters/apps/env/production/observability/jaeger/app/loadbalancer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-external
  annotations:
    io.cilium/lb-ipam-ips: ${CLUSTER_LB_JAEGER}
    opn.internal-dns.kubernetes.io/target: &target ${CLUSTER_LB_JAEGER}
    opn.internal-dns.kubernetes.io/hostname: &hostname ${INGRESSROUTE_SUBDOMAIN}.${FAMILY_DOMAIN}
    pi.internal-dns.kubernetes.io/target: *target
    pi.internal-dns.kubernetes.io/hostname: *hostname
  labels:
    io.cilium/bgp-announce: worker
spec:
  selector:
    app.kubernetes.io/component: all-in-one
    app.kubernetes.io/instance: jaeger
    app.kubernetes.io/name: jaeger
  type: LoadBalancer
  loadBalancerIP: ${CLUSTER_LB_JAEGER}
  ports:
    - appProtocol: http
      name: http-zipkin
      port: 9411
    - appProtocol: grpc
      name: grpc-http
      port: 14250
    - name: c-tchan-trft
      port: 14267
    - appProtocol: http
      name: http-c-binary-trft
      port: 14268
    - appProtocol: grpc
      name: otlp-grpc
      port: 4317
    - appProtocol: http
      name: otlp-http
      port: 4318
