clusters/apps/env/production/observability/jaeger/app/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ${APP}
  annotations:
    kubernetes.io/ingress.class: "traefik-internal"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`${INGRESSROUTE_SUBDOMAIN}.${FAMILY_DOMAIN}`)"
      priority: 10
      services:
        - name: jaeger-query
          port: 16686
  tls:
    secretName: heyjohn-wildcard-certificate
    domains:
      - main: ${INGRESSROUTE_SUBDOMAIN}.${FAMILY_DOMAIN}
